--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material # (4)!
+      - run: pip install "mkdocs-material[imaging]"
       - run: mkdocs gh-deploy --force
