--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
       - AP: Quads/Q3.24/AP.md
     - Q1.25:
       - AR1: Quads/Q1.25/AR1.md
+      - MO: Quads/Q1.25/MO.md
   - Monitorias:
     - Geometria Analítica:
       - Referências: Monitorias/Geometria-Analitica/bibliografia.md
