Added Cauchy-Schwarz Inequality as my first escrivinhação

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,8 @@ nav:
       - Referências: Monitorias/Geometria-Analitica/bibliografia.md
   - My Heroes: my-heroes.md
   - Utilidades: utilidades.md
+  - Escrivinhações:
+    - Desigualdade de Cauchy-Schwarz: Cauchy-Schwarz.md
 
 plugins:
   - social
