--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,8 @@ nav:
       - AP: Quads/Q3.24/AP.md
     - Q1.25:
       - AR1: Quads/Q1.25/AR1.md
-      - MO: Quads/Q1.25/MO.md
+      - MDO: Quads/Q1.25/MDO.md
+      - TDG: Quads/Q1.25/TDG.md
   - Monitorias:
     - Geometria Analítica:
       - Referências: Monitorias/Geometria-Analitica/bibliografia.md
