--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,9 @@ site_name: Gabriel Sembenelli
 site_description: My personal website!
 site_url: https://gabriel-sembenelli.github.io/
 
-# THEME ------------------------------------------------------------------------
+#-------------------------------------------------------------------------------
+#                   THEME
+#-------------------------------------------------------------------------------
 theme:
   name: material
   language: en
@@ -55,34 +57,39 @@ theme:
       primary: teal
       accent: orange
 
-# NAVIGATION -------------------------------------------------------------------
+#-------------------------------------------------------------------------------
+#                   NAVIGATION
+#-------------------------------------------------------------------------------
+
 nav:
   # - Testes: test.md
   - Home: index.md
-  - My Heroes: my-heroes.md
+  - Giants: giants.md
   - Estudo:
-    - Q24.2:
-      - ADA: Quads/Q24.2/ADA.md
-    - Q24.3:
-      - ALA: Quads/Q24.3/ALA.md
-      - CDP: Quads/Q24.3/CDP.md
-      - NRES: Quads/Q24.3/NRES.md
-      - AP: Quads/Q24.3/AP.md
-    - Q25.1:
-      - AR1: Quads/Q25.1/AR1.md
-      - MDO: Quads/Q25.1/MDO.md
-      - TDG: Quads/Q25.1/TDG.md
     - Q25.2:
       - AR2: Quads/Q25.2/AR2.md
       - PADPB: Quads/Q25.2/PADPB.md
       - SDLDP: Quads/Q25.2/SDLDP.md
       - VCEA: Quads/Q25.2/VCEA.md
+    - Q25.1:
+      - AR1: Quads/Q25.1/AR1.md
+      - MDO: Quads/Q25.1/MDO.md
+      - TDG: Quads/Q25.1/TDG.md
+    - Q24.3:
+      - ALA: Quads/Q24.3/ALA.md
+      - CDP: Quads/Q24.3/CDP.md
+      - NRES: Quads/Q24.3/NRES.md
+      - AP: Quads/Q24.3/AP.md
+    - Q24.2:
+      - ADA: Quads/Q24.2/ADA.md
   - Utilidades: utilidades.md
   - Monitorias:
     - Geometria Analítica:
       - Referências: Monitorias/Geometria-Analitica/bibliografia.md
   - Escrivinhações:
     - Desigualdade de Cauchy-Schwarz: Cauchy-Schwarz.md
+
+#-------------------------------------------------------------------------------
 
 plugins:
   - social
